src/test/ui/cast_char.stderr
error: only u8 can be cast into char
  --> $DIR/cast_char.rs:14:23
   |
LL |     const XYZ: char = 0x1F888 as char;
   |                       ^^^^^^^^^^^^^^^ help: use a char literal instead: `'/u{1F888}'`
   |
note: lint level defined here
  --> $DIR/cast_char.rs:11:9
   |
LL | #![deny(overflowing_literals)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: only u8 can be cast into char
  --> $DIR/cast_char.rs:16:22
   |
LL |     const XY: char = 129160 as char;
   |                      ^^^^^^^^^^^^^^ help: use a char literal instead: `'/u{1F888}'`

error: aborting due to 2 previous errors

